--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "vlucas/phpdotenv": "^5.6",
         "ramsey/uuid": "^4.9",
         "phpmailer/phpmailer": "^6.10",
-        "phpoffice/phpspreadsheet": "^5.1"
+        "phpoffice/phpspreadsheet": "^5.1",
+        "jairojeffsantos/file-uploader": "^1.0"
     }
 }
