--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "App\\Financas\\": "src/"
+            "Financas\\": "src/"
         }
     },
     "authors": [
@@ -18,8 +18,6 @@
     "require": {
         "illuminate/database": "^12.28",
         "vlucas/phpdotenv": "^5.6",
-        "ramsey/uuid": "^4.9",
-        "jairojeffsantos/easy-logger": "^1.0",
-        "jairojeffsantos/easy-file-uploader": "^1.0"
+        "ramsey/uuid": "^4.9"
     }
 }
